; ModuleID = '/home/carl/AnghaBench/8cc/extr_lex.c_skip_block_comment.c'
source_filename = "/home/carl/AnghaBench/8cc/extr_lex.c_skip_block_comment.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EOF = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [31 x i8] c"premature end of block comment\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @skip_block_comment to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @skip_block_comment() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = call i32 @get_pos(i32 -2)
  store i32 %4, i32* %1, align 4
  store i32 0, i32* %2, align 4
  br label %5

5:                                                ; preds = %20, %0
  %6 = call i32 (...) @readc()
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = load i32, i32* @EOF, align 4
  %9 = icmp eq i32 %7, %8
  br i1 %9, label %10, label %13

10:                                               ; preds = %5
  %11 = load i32, i32* %1, align 4
  %12 = call i32 @errorp(i32 %11, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0))
  br label %13

13:                                               ; preds = %10, %5
  %14 = load i32, i32* %3, align 4
  %15 = icmp eq i32 %14, 47
  br i1 %15, label %16, label %20

16:                                               ; preds = %13
  %17 = load i32, i32* %2, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %16
  ret void

20:                                               ; preds = %16, %13
  %21 = load i32, i32* %3, align 4
  %22 = icmp eq i32 %21, 42
  %23 = zext i1 %22 to i32
  store i32 %23, i32* %2, align 4
  br label %5
}

declare dso_local i32 @get_pos(i32) #1

declare dso_local i32 @readc(...) #1

declare dso_local i32 @errorp(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
